fix navbar on mobile
fixes #88

--- a/assets/Sass/black/ext.scss
+++ b/assets/Sass/black/ext.scss
@@ -197,7 +197,7 @@ iframe {
     transform: rotate(180deg);
 }
 
-#logoutMobileViewButton {
+#logoutDropdown {
     display: none;
 }
 
@@ -211,10 +211,10 @@ iframe {
         }
     }
 
-    #authButtons {
+    #logoutButton {
         display: none;
     }
-    #logoutMobileViewButton {
+    #logoutDropdown {
         display: block;
     }
 }
